fix: editor max width overflow

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -1,9 +1,5 @@
-.tiptap {
-  width: 100%;
-}
-
 .ProseMirror {
-  @apply prose prose-slate;
+  @apply prose prose-slate max-w-none;
 
   padding: 60px 80px 48px 80px;
 }
